# game-of-life-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
