[package]
name = "life"
version = "0.1.5"
authors = ["Lyall Jonathan Di Trapani <lj.ditrapani@gmail.com>"]
description = "Conway's Game of Life on 2-D toroidal grid in rust."
license = "MIT/Apache-2.0"
homepage = "https://github.com/lj-ditrapani/game-of-life-rust"
documentation = "https://github.com/lj-ditrapani/game-of-life-rust"
repository = "https://github.com/lj-ditrapani/game-of-life-rust"
readme = "README.md"
keywords = ["Conways_game_of_life", "game", "toy", "cellular_automaton"]

[dependencies]
term = "0.5"
